# bmcl

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING.txt  COPYRIGHT  LICENSE  meson.build  meson_options.txt
bench/: Buffer.cpp  CMakeLists.txt  Sha3.cpp  meson.build
cmake/: Bmcl.cmake  config.h.in  test-coverage.sh.in
include/bmcl/: endian.h  memreader.h  memwriter.h  platform.h  reader.h  ringarray.h  ringbucket.h  ringbuf.h  sched.h  writer.h
include/bmcl/core/: endian.h  memreader.h  memwriter.h  queue.h  reader.h  ringarray.h  ringbucket.h  ringbuf.h  sched.h  stack.h  status.h  writer.h
include/bmcl/interp/: interp.h
include/bmcl/telem/: frame.h
include/bmcl/tm/: db.h
src/: CMakeLists.txt  ardu-test.cpp  bmcl.h  memreader.c  memwriter.c  meson.build  ringarray.c  ringbucket.c  ringbuf.c  sched.c
src/bmcl/: AlignedUnion.h  Alloca.h  ArrayView.h  Assert.cpp  Assert.h  BitArray.h  Buffer.cpp  Buffer.h  Bytes.h  CMakeLists.txt  CString.cpp  CString.h  ColorStream.cpp  ColorStream.h  Config.h.meson.in  DefaultOption.h  DoubleEq.cpp  DoubleEq.h  Either.h  Endian.h  FileUtils.cpp  FileUtils.h  FixedArrayView.h  Fwd.h  Hash.h  IpAddress.cpp  IpAddress.h  Logging.cpp  Logging.h  MakeRc.h  Math.h  MemReader.cpp  MemReader.h  MemWriter.cpp  MemWriter.h  MmapOpener.cpp  MmapOpener.h  NonNullUniquePtr.h  Option.h  OptionFwd.h  (+44 more)
src/bmcl/bits/: ArrayViewBaseDecl.h  ArrayViewBaseImpl.h  ArrayViewDecl.h  ArrayViewImpl.h  BufferDecl.h  BufferImpl.h  FixedArrayViewDecl.h  FixedArrayViewImpl.h  MemReaderDecl.h  MemReaderImpl.h  MemWriterDecl.h  MemWriterImpl.h
src/bmcl/core/: CMakeLists.txt  Endian.h  MemReader.cpp  MemReader.h  MemWriter.cpp  MemWriter.h  Platform.h  Reader.h  RingArray.cpp  RingArray.h  RingBucket.cpp  RingBucket.h  RingBuffer.cpp  RingBuffer.h  Stack.h  Status.cpp  Status.h  Writer.h  endian.h  memreader.cpp  memreader.h  memwriter.cpp  memwriter.h  reader.h  ringarray.cpp  ringarray.h  ringbucket.cpp  ringbucket.h  ringbuf.cpp  ringbuf.h  status.cpp  status.h  writer.h
src/bmcl/interp/: CMakeLists.txt  interp.cpp  interp.h
src/bmcl/interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h
src/bmcl/telem/: customtm.h  frame.h  serializer.h
src/bmcl/tm/: CMakeLists.txt  CustomTm.h  Frame.h  Serializer.h  db.c
src/core/: CMakeLists.txt  memreader.c  memwriter.c  ringarray.c  ringarray.cpp  ringbucket.c  ringbucket.cpp  ringbuf.c  ringbuf.cpp  sched.c  status.c  status.cpp
src/interp/: CMakeLists.txt  interp.c  interp.cpp
src/telem/: CMakeLists.txt
src/tm/: CMakeLists.txt  db.c
subprojects/: benchmark.wrap
tests/: AlignedUnion.cpp  ArrayView.cpp  BitArray.cpp  BmclTest.h  Buffer.cpp  CMakeLists.txt  CString.cpp  ColorStream.cpp  Either.cpp  Environment.cpp  Interpreter.cpp  Logging.cpp  MemReader.cpp  MemWriter.cpp  Misc.cpp  MmapOpener.cpp  Option.cpp  Panic.cpp  Reader.cpp  Result.cpp  RingArray.cpp  RingBucket.cpp  RingBuffer.cpp  Sha3.cpp  SharedBytes.cpp  String.cpp  StringView.cpp  Utils.cpp  Uuid.cpp  Variant.cpp  Writer.cpp  bmcl-test.h  environment.cpp  interp.cpp  memreader.cpp  memwriter.cpp  meson.build  queue.cpp  reader.cpp  ringarray.cpp  (+4 more)
